[package]
name = "matta-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
bytes = { version = "1", features = ["serde"] }
octets = "0.3.0"
byteorder = "1.5.0"